--- a/1-styles.css
+++ b/1-styles.css
@@ -184,7 +184,8 @@ template {
 
 /*# sourceMappingURL=normalize.min.css.map */
 
-/* Variables  */
+/* Variables
+        ============================= */
 
 :root {
   /** COLOR **/
@@ -196,7 +197,7 @@ template {
   --text-color: var(--color-black);
 
   /** FONT **/
-  --font-family-base: "Source Sans Pro";
+  --font-family-base: 'Source Sans Pro';
 
   --font-size-small: 0.75rem;
   --font-size-medium: 0.9rem;
@@ -237,7 +238,8 @@ template {
   --button-hover: var(--color-salmon-dark);
 }
 
-/* Base */
+/* Base
+              ============================= */
 
 *,
 *:before,
@@ -266,7 +268,6 @@ body {
 .nav-link:hover {
   color: var(--color-salmon);
   text-decoration: none;
-  box-shadow: none;
 }
 
 button {
@@ -282,7 +283,6 @@ button {
   line-height: 18px;
   filter: var(--button-filter);
   margin-bottom: 80px;
-  text-decoration: none;
 }
 
 button:hover {
@@ -290,27 +290,29 @@ button:hover {
   cursor: pointer;
 }
 
-/* Layout */
+/* Layout ============================= */
+
 
 .container-body {
   background-image: url(images/headphones_hero_1.jpg);
-  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding-top: 100px;
-  max-width: 100%;
 }
 
 .container-body,
 .section-hero {
   height: 800px;
+  max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 100px;
 }
 
 .header-container {
   display: flex;
+  /* flex-direction: column; */
   justify-content: space-around;
+
 }
 
 .container {
@@ -324,14 +326,13 @@ button:hover {
   color: var(--color-navy);
   background: var(--color-white);
   text-align: center;
-  padding: 110px;
-
+  /* margin-top: 1000px; */
 }
 
 .section-what-we-do .section-title {
   font-size: 32px;
-  line-height: 37px;
   font-weight: var(--font-weight-bold);
+  line-height: 37px;
 }
 
 .section-what-we-do .card-title {
@@ -340,13 +341,8 @@ button:hover {
 }
 
 .section-what-we-do .section-paragraph {
-  font-weight: normal;
+  /* top: calc(50% - 104px/2 + 40px); */
   font-size: 16px;
-  line-height: 26px;
-  padding-left: 150px;
-  padding-right: 150px;
-  margin-bottom: 70px;
-  margin-top: 50px;
 }
 
 .section-what-we-do .section-tagline {
@@ -358,85 +354,8 @@ button:hover {
   font-size: 100px;
 }
 
-.dark {
-  flex-direction: column;
-  justify-content: space-around;
-  background-image: url(images/headphones_hero_2.jpg);
-  background-color: var(--color-navy);
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  height: auto;
-  padding-bottom: 70px;
-}
-
-.dark .section-title {
-  color: var(--color-white);
-  font-weight: var(--font-weight-bold);
-  font-family: var(--font-family-base);
-  font-size: 32px;
-  text-align: center;
-  padding-top: 120px;
-}
-
-.dark .section-body .section-inner p.section-paragraph {
-  color: var(--color-white);
-  font-family: var(--font-family-base);
-  font-size: 16px;
-  text-align: center;
-  line-height: 26px;
-  margin-left: 5%;
-  margin-right: 5%;
-  padding-right: 120px;
-  margin-bottom: 70px;
-  margin-top: 50px;
-}
-
-.pentagon {
-  /* position: absolute; */
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  text-align: center;
-  background-image: url(images/pentagone.png);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 180px;
-  height: 180px;
-}
-
-.pentagon .section-tagline {
-  font-size: 46px;
-  font-weight: var(--font-weight-bold);
-  margin-top: 2.5rem;
-  color: var(--color-white);
-}
-
-.pentagon .section-tagline-text {
-  font-size: 14px;
-  font-weight: var(--font-weight-bold);
-  margin-top: -5.5rem;
-  color: var(--color-white);
-}
-
-/* contact us section */
-
-.contact-me {
-  font-family: var(--font-family-base);
-  color: var(--color-navy);
-  background: var(--color-white);
-  text-align: center;
-  width: 100%;
-  height: auto;
-}
-
-.contact-me div.form-group.col-1-2,
-.contact-me div.form-group.col-2-3 {
-  text-align: left;
-}
-
-/* Grid */
+/* Grid
+        ============================= */
 
 ul.row {
   margin: -1rem;
@@ -448,7 +367,7 @@ ul.row {
   display: flex;
 }
 
-[class*="col-"] {
+[class*='col-'] {
   margin: 1rem;
 }
 
@@ -456,20 +375,7 @@ ul.row {
   width: calc((100% / 4) - 2rem);
 }
 
-ul.row-our {
-  padding: 0;
-  list-style: none;
-}
-
-.row-our {
-  display: flex;
-}
-
-.our-col-1-4 {
-  width: calc((100% / 4) - 2rem);
-}
-
-/* Header */
+/* Header ============================= */
 
 .header-container .header-logo a img {
   width: 10rem;
@@ -482,6 +388,7 @@ ul.row-our {
   justify-content: space-between;
   margin: -3rem 0 0;
 }
+
 
 .header .menu-icon {
   cursor: pointer;
@@ -534,13 +441,12 @@ ul.row-our {
   text-align: var(--section-header-align);
   width: 39.8rem;
   min-height: 35vh;
-  padding-top: 220px;
+
 }
 
 .section-header {
   font-weight: var(--font-weight-bold);
-  margin-bottom: 0;
-  font-size: 32px;
+  /*margin: 0; */
   font-family: var(--font-family-base);
 }
 
@@ -582,8 +488,8 @@ ul.row-our {
   top: 0;
 }
 
-/* Navbar */
-
+/* Navbar
+            ============================= */
 .nav {
   margin: 0;
   padding: 0;
@@ -629,36 +535,25 @@ nav .nav-link {
   position: absolute;
 }
 
-.icon-container {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+/* Responsive ============================= */
 
-}
-
-.dark .pentagon {
-  margin: 50px 50px;
-}
-
-/* Responsive tablet */
-
-@media (max-width: 769px) {
-  .section-body-row {
-    display: flex;
-  }
-
+@media (max-width: 768px) {
   .navbar-placeholder {
     position: relative;
+    orientation: horizontal;
   }
+
+  /* section what we do */
+
+  /* .section-body {
+      display: block;
+    } */
 
   .row {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    flex-wrap: wrap;
   }
 
-  [class*="col-"] {
+  [class*='col-'] {
     margin: 0 0 4rem 0;
   }
 
@@ -666,34 +561,12 @@ nav .nav-link {
     width: 100%;
   }
 
-  .icon-container {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
-    flex-wrap: wrap;
-  }
 
-  .row-our {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 3.5fr 1fr;
-  }
 
-  .section-what-we-do .section-paragraph {
-    padding-left: 0;
-    padding-right: 0;
-  }
 
-  ul.row-our {
-    margin-left: 11vh;
-  }
-
-  .dark .section-paragraph {
-    padding-left: 7vh;
-  }
 }
 
-/* Responsive mobile */
+/* Responsive ============================= */
 
 @media (max-width: 480px) {
   :root {
@@ -733,12 +606,11 @@ nav .nav-link {
   ul.row {
     display: flex;
     flex-direction: column;
-
+    /* margin: 20px 0 0 0; */
   }
 
-  [class*="col-"] {
+  [class*='col-'] {
     margin: 0 0 3rem 0;
-
   }
 
   .col-1-4 {
@@ -746,209 +618,4 @@ nav .nav-link {
   }
 
   /*  */
-
-  ul.row-our {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .row-our {
-    align-items: center;
-  }
-
-  .our-col-1-4 {
-    margin-top: 180px;
-  }
-
-  .dark {
-    height: auto;
-    /* padding-left: 10vw;
-      padding-right: 10vw; */
-    padding-bottom: 10px;
-  }
-
-  /* .dark .card-title{
-      /* display: flex;
-      /* flex-direction: center; */
-  /* align-content: center; */
-  /* padding-left: 10vw;
-      padding-right: 10vw;
-    } */
-
-  ul.row-our {
-    margin-left: -7vh;
-    margin-top: -20vh;
-  }
-
-  .dark .section-title {
-    max-width: 100vw;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px 20px 20px 0;
-    /* width: 100px; */
-  }
-
-  .dark .section-body .section-inner p.section-paragraph {
-    /* padding-left: auto;
-      padding-right: auto; */
-    padding: 0;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 50px;
-    padding-right: 50px;
-    text-align: justify;
-    /* width: 100px; */
-  }
-
-  .dark .pentagon {
-    margin: 0;
-
-  }
-
-  .pentagon .section-tagline-text {
-    font-size: 7px;
-    padding-bottom: 5px;
-    text-align: center;
-    margin-bottom: -50;
-  }
-
-  .pentagon .section-tagline {
-    font-size: 40px;
-    /* margin: 3px; */
-    margin-top: 15px;
-    margin-bottom: 5px;
-    /* top: 10px; */
-  }
-
-
-  .dark .icon-container {
-    width: 100px;
-  }
-
-
-}
-
-/* Footer ============================= */
-
-.footer {
-  left: 0%;
-  right: 0%;
-  top: 0%;
-  bottom: 0%;
-  background: #071629;
-  height: 249px;
-  padding-top: 70px;
-}
-
-.footer .footer-logo img {
-  width: 161px;
-  height: 32px;
-  left: 199.61px;
-  top: 91.76px;
-}
-
-.footer .row {
-  justify-content: space-between;
-}
-
-.footer-copyright {
-  height: 15px;
-  left: 46.5%;
-  right: 46.5%;
-  top: calc(50% - 15px/2 + 78px);
-
-  font-family: Source Sans Pro;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 15px;
-
-  color: #FFFFFF;
-  mix-blend-mode: normal;
-  opacity: 0.35;
-}
-
-.footer .footer-text {
-  justify-content: center;
-}
-
-.footer .social-link {
-  width: 30px;
-  height: 30px;
-  left: 1120px;
-  top: 90px;
-  fill: var(--color-navy);
-  color: var(--color-white);
-  font-size: 30px;
-}
-
-@media (max-width: 480px) {
-  .footer .row .footer-text {
-    height: 0;
-  }
-
-  .footer .row {
-    display: block;
-    align-items: center;
-  }
-
-  .footer .row .footer-logo,
-  .footer ul.social.nav {
-    justify-content: center;
-    margin-bottom: 3px;
-  }
-
-  .footer-copyright {
-    margin: 0;
-    text-align: center;
-  }
-
-  .footer .footer-logo {
-    text-align: center;
-  }
-
-  .footer .container {
-    height: 20px;
-  }
-
-  .footer .footer-logo img {
-    margin-top: 50px;
-    margin-bottom: 20px;
-  }
-
-  .footer {
-    padding: 0;
-  }
-}
-
-@media (max-width: 769px) {
-
-  .footer .row .footer-text {
-    height: 0;
-  }
-
-  .footer .row {
-    padding-top: 60px;
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    height: 80%;
-  }
-
-  .footer .footer .footer-logo {
-    text-align: center;
-  }
-
-  .footer .row {
-    align-items: center;
-  }
-
-  .footer .footer-text {
-    height: 0;
-    padding-top: 30px;
-  }
-
-  .footer {
-    padding: 0;
-  }
 }
